...
            return "Modes"
        case .tools:
            return "Tools"
        case .radio:
            return "Radio"
        case .setup:
            return "Setup"
        }
    }
}

